added a bunch of stuff

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">FoodCalculator</string>
     <string name="title_activity_login">LoginActivity</string>
-    <string name="prompt_email">Email</string>
+    <string name="prompt_email">Username</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_register">Register</string>
@@ -12,7 +12,7 @@
     <string name="invalid_password_register">Password must contain at least 12 characters, one digit, one uppercase and one lowercase letter and a special character!</string>
     <string name="login_failed">"Login failed, check username and password"</string>
     <string name="not_registered">"Not registered? Create an account"</string>
-    <string name="account_created">"Account successfully created!"</string>
+    <string name="account_created">"Account successfully created"</string>
     <string name="retry">"Retry"</string>
 
     <string name="diaryButton">"Add diary entries"</string>3
@@ -27,7 +27,32 @@
 
     <string name="add_diary_entries">"Add diary entries"</string>
     <string name="add_diary_food">"Add food"</string>
-    <string name="find_food">"Select a food"</string>
+    <string name="find_food">"Name of the food"</string>
 
+    <string name="mealtype">"Meal type"</string>
+
+    <string name="invalid_food">Not a valid food</string>
+    <string name="invalid_nutrition">Must be at least 0</string>
+    <string name="invalid_mealtype">Not a valid meal type</string>
+
+    <string name="online_lookup"><u>"Not in here? Enter meal size and try online lookup"</u></string>
+
+    <string name="mealtype_default">"Breakfast"</string>
+    <string name="calories">Calories</string>
+    <string name="sugars">Sugars</string>
+    <string name="fats">Fats</string>
+    <string name="fibers">Fibers</string>
+    <string name="sodium">Sodium</string>
+    <string name="protein">Protein</string>
+    <string name="carbohydrates">Carbohydrates</string>
+    <string name="meal_type">Meal type:</string>
+    <string name="meal_size">Meal size:</string>
+    <string name="in_grams_hint">in grams</string>
+    <string name="nutritional_info">Nutritional info:</string>
+    <string name="fooddiary_nav">FoodDiary</string>
+    <string name="profile">Profile</string>
+    <string name="diary">Diary</string>
+    <string name="about">About</string>
+    <string name="log_out_drawer">Log out</string>
 
 </resources>
